src/objects/Active_Work_Orders_Analytic_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Associate_Name__c</fullName>
        <label>Associate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Number__c</fullName>
        <label>Associate Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Service__c</fullName>
        <label>Associate Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Status__c</fullName>
        <label>Associate Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enrollment_Complete__c</fullName>
        <label>Enrollment Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Active Work Orders Analytic Snapshot</label>
    <nameField>
        <label>Active Work Orders Analytic Snapshot Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Active Work Orders Analytic Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>